# chint

./: Cargo.toml  README.md
chint/: Cargo.toml
chint/problems/1/: description.md
chint/problems/2/: 4.in  description.md
chint/src/: cli.rs  command_guesser.rs  main.rs  test_runner.rs  tester.rs  text_diff.rs
guru/: Cargo.toml
guru/abc/: 4684.out  description.md
guru/src/: main.rs  problem.rs
macro_types/: Cargo.toml
macro_types/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
