[package]
name = "chint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
clap_complete = "4.3.0"
include_dir = "0.7.3"
macro_types = { version = "0.1.0", path = "../macro_types" }
macros = { version = "0.1.0", path = "../macros", features = ["nightly"] }
shlex = "1.1.0"
termimad = "0.23.0"
wait-timeout = "0.2.0"
difference = "2.0"
term = "0.7.0"
