[package]
name = "guru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
include_dir = "0.7.3"
macro_types = { version = "0.1.0", path = "../macro_types" }
macros = { version = "0.1.0", path = "../macros", features = ["nightly"] }
